--- a/ui/jen-ting-huang-interview-project/src/components/App.css
+++ b/ui/jen-ting-huang-interview-project/src/components/App.css
@@ -10,72 +10,31 @@
   --color-border: #e0e3e6;
 }
 
-.item-wrapper {
-  display: flex; /* Establishes a flex container */
-  align-items: flex-start; /* Aligns children to the start of the cross axis, which is the top in a row layout */
-  padding: 10px; /* Adds padding around the flex container */
-}
-
-.item-wrapper > :first-child {
-  flex-basis: 30%; /* Sets the initial size of the flex item */
-  text-align: left; /* Aligns text to the left */
-}
-
-.item-wrapper > :last-child {
-  flex-grow: 1; /* Takes up remaining space */
-  text-align: left; /* Aligns text to the left */
-}
 .survey {
   width: 100%;
+  height: fit-content;
   max-width: 480px;
-  height: auto;
   margin: 0 auto;
   background-color: var(--color-white);
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
-.survey-header {
-  display: flex;
-  height: 20px;
-  align-items: center;
-  padding: 16px;
-  justify-content: space-between;
-  background-color: var(--color-main);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+body {
+  width: 100vw; /* Makes the body take up the full width of the viewport */
+  height: 100vh; /* Makes the body take up the full height of the viewport */
 }
 
-.checkbox-inline {
-  display: inline-block;
+#root {
+  width: 100vw; /* Makes the root take up the full width of the viewport */
+  height: 100vh; /* Makes the root take up the full height of the viewport */
+  display: flex; /* Establishes a flex container */
+  justify-content: center; /* Aligns children to the center of the main axis */
+  align-items: center; /* Aligns children to the center of the cross axis */
 }
 
-.field-children {
-  width: 70%; /* Or any specific width */
-  height: auto;
-}
-
-.submit-button {
-  background-color: green;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  margin-right: 10px;
-  border-radius: 5px;
-}
-
-.clear-button {
-  background-color: rgb(243, 60, 60);
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  margin-left: 10px;
-  border-radius: 5px;
-}
-
-/* Hover effects for better user experience */
-.submit-button:hover,
-.clear-button:hover {
-  opacity: 0.8;
+#item-container {
+  padding: 1rem; /* Adds padding around the item container */
 }
