--- a/ui/jen-ting-huang-interview-project/src/components/Field/components/FieldChild.css
+++ b/ui/jen-ting-huang-interview-project/src/components/Field/components/FieldChild.css
@@ -8,6 +8,10 @@
   margin-right: 3px;
 }
 
+.notifications {
+  max-width: 100%;
+}
+
 .submit-button {
   background-color: green;
   color: white;
